--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 	<head>
-		<title>Hacktoberfest Census</title>
+		<title>Hacktoberfest Census is here</title>
         <link rel="icon" href="static/img/favicon.png">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
